Finished React course introduction note

--- a/CompTIA A+/1. The Basics.tex
+++ b/CompTIA A+/1. The Basics.tex
@@ -106,4 +106,23 @@
                 \end{center}
     \end{itemize}
 
+    \subsection*{CompTIA Troubleshooting Theory}
+    \begin{itemize}
+        \item \textbf{CompTIA troubleshooting theory} is a \textbf{set of steps} that \textbf{technicians} can go through to \textbf{troubleshoot problems}.
+        \begin{itemize}
+            \item There are different approaches to troubleshooting, this is the way that CompTIA prefers.
+            \item Specific organizations may also have extra steps they want you to perform (eg paperwork).
+        \end{itemize}
+        \item \textbf{Always consider policies, procedures, and impacts before implementing changes}.
+        \item Troubleshooting steps:
+        \begin{enumerate}
+            \item \textbf{Identify the problem} | Talk to the user, and discover what issues they are having.
+            \item \textbf{Establish a theory of probable cause} | Take a look at the device and identify what may be causing the issue.
+            \item \textbf{Test the theory to determine the cause} | Test the theory to see if it is actually the cause, if it is not, go back to step 2. If you are not able to determine the issue, you can always escalate the problem (ask for help).
+            \item \textbf{Establish a plan of action to resolve the problem and implement the solution} | Try to resolve the problem.
+            \item \textbf{Verify full system functionality and implement preventative measures if applicable} | Ensure the user is satisfied with the solution and implement preventative measures (this could be telling the user how to prevent the issue, or documenting the issue, or escalating the issues, etc).
+            \item \textbf{Document findings, actions, and outcomes} | This can be organization specific, but document everything that is required.
+        \end{enumerate}
+    \end{itemize}
+
     \end{document}
