Finished taking CompTIA A+ computer note

--- a/CompTIA A+/1. The Basics.tex
+++ b/CompTIA A+/1. The Basics.tex
@@ -36,7 +36,7 @@
 
 \begin{document}
 
-    \section*{\centering{Introduction}}
+    \section*{\centering{Introduction to CompTIA}}
 
     \subsection*{Introduction To The CompTIA A+ Certification}
     \begin{itemize}
@@ -125,4 +125,4 @@
         \end{enumerate}
     \end{itemize}
 
-    \end{document}
+\end{document}
